--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Sparshith
+name: Sparshith Sampath
 
 # Short bio or description (displayed in the header)
-description: My jekyll powerd blog! 
+description: Daily shots and me.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -18,12 +18,12 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
+  email: sparshithsampath@gmail.com
+  facebook: https://www.facebook.com/Sparshithsampath
   flickr:
-  github: barryclark/jekyll-now
+  github: https://github.com/Sparshith/
   instagram:
-  linkedin:
+  linkedin: https://in.linkedin.com/in/sparshith-sampath-50886377
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: jekyllrb
