--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Sparshith Sampath
 description: Daily shots and me.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/Sparshith/Sparshith.github.io/blob/d7097e134c2c7bf49ee088daed88460d2ad56ffb/images/dp.jpg
+avatar: https://avatars1.githubusercontent.com/u/8277740?v=2&s=460
 
 #
 # Flags below are optional
